_sass/custom.scss
:root {
  --bg1-color: forestgreen;
  --bg1-image: url(/assets/background_3_edit.jpg);
  
  --bg2-color: darkslategray;
  --bg2-image: url(/assets/green_squares.png);
  
  --hyper-link-color: lightskyblue;
}

body {
  background-color: var(--bg1-color);
  background-image: var(--bg1-image);
  background-size: cover;
  font-family: 'Raleway', sans-serif;
  
  height: 100%;
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.col {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 1;
  align-items: safe center;
  justify-content: safe center;
}

#site-wrapper {
  height: 100vh;
}

@media (max-width: 900px) {
  #profile-info {
    display: none;
  }
  
  #detailed-info {
    width: 100%;
  }
}


/**
 * Profile
 */

.profile {
  margin-top: 8%;
  margin-bottom: 8%;
  
  width: 20%;
  float: left;
  
  text-align: center;
}

.profile-image {
  width: 200px;
  
  img {
    border-radius: 50%;
    box-shadow: 0 3px 2px rgba(0,0,0,0.3);
  }
}

#profile-name {
  color: white;
  font-weight: 900;
  font-size: 42px;
  margin: 10px auto;
}

#profile-intro {
  color: white;
  font-weight: 900;
  font-size: 22px;
  margin: 10px auto;
}

hr {
  border: 0;
  margin: 10px auto;
}

.page-break {
  border: 0;
  border-top: 1px solid darkgray;
  width: 20%;
  margin: 10px auto;
}

.long {
  width: 15%;
}

.short {
  width: 10%;
}

.nav-list {
  list-style-type: none;
  margin: 20px auto;
}

.nav-item {
  display: inline-block;
}

.nav-button {
  border: 1px solid darkgray;
  border-radius: 20px;
  min-width: 100px;
  cursor: pointer;
  text-align: center;
  padding: 5px;
  font-weight: bold;
  margin: 5px 10px;
  
  li {
    color: darkgray;
    text-decoration: none;
  }
  
  li:hover {
    color: darkorange;
  }
}

.nav-button:hover {
  border-color: white;
}

.nav-social {
  max-width: 30px;
  width: 30px;
  padding: 0px 15px;
}

social-icon {
}

/**
 * Content
 */

.detailed-info {
  background-color: var(--bg2-color);
  background-image: var(--bg2-image);
  
  float: left;
  width: 80%;
  height: 100%;
  
  overflow-y: auto;
}

.content {
  padding: 70px 10px;
  max-width: 900px;
  
  h1 {
    width: 100%;
    margin: 20px 0;
    
    font-weight: 600px;
    font-size: 36px;
    text-align: center;
    
    border-top: solid 1px black;
    border-bottom: solid 1px black;
  }
}

.content-header {
  h1 {
    margin-top: 0;
    font-weight: 1000;
    font-size: 48px;
    border: none;
  }
}

/**
 * Misc
 */

.dated-header {
  text-align: center;
  
  h2, h3 {
    margin: 0;
  }
  
  span {
    color: white;
  }
}

.screen-shot-count {
  color: lightgray;
  font-style: italic;
  font-size: 12;
}

.pet-images {
  img {
    max-height: 300px;
    margin: 10px 20px;
  }
}

